--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="card">
         <img
-          src="../img/fotoPequeño.jpg"
+          src="img/fotoPequeño.jpg"
           alt="Yo Pequeño"
           class="card__image"
         />
