--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
       </div>
 
       <div class="card">
-        <img
-          src="img/fotoPequeño.jpg"
-          alt="Yo Pequeño"
-          class="card__image"
-        />
+        <img src="img/fotoPequeño.jpg" alt="Yo Pequeño" class="card__image" />
         <h3 class="card__text">Ginés Pastor Ortega</h3>
         <a href="https://iesruizgijon.es" class="card__btn"
           >Estudiante del IES Ruíz Gijón</a
@@ -52,13 +48,9 @@
       <div class="aficiones">
         <h1 id="aficiones">Aficiones</h1>
         <div class="p-aficiones">
-          En mi tiempo libre me gusta pasar tiempo con las personas que me
-          importan, jugar videojuegos, ver películas, series, leer libros de vez
-          en cuando y practicar deporte. También desde que puedo conducir, es
-          una de las cosas que más me gusta hacer. Otra de mis aficiones
-          recientes es la programación web, paso mucho tiempo intentando
-          aprender nuevas técnicas para mejorar mi producitividad programando y
-          el aspecto visual de mis proyectos.
+          Mi tiempo libre lo dedico sobre todo a estar con mi familia y amigos y
+          jugar a los videojuegos. Normalmente salgo unos 2 días a la semana y
+          siempre que puedo salir a practicar deporte con ellos
         </div>
       </div>
 
