--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
         <div class="p-intro">
           <p>
             Soy <span>Ginés Pastor Ortega</span> alumno del curso de
-            Programación Web en Entorno Cliente del IES Ruíz Gijón. Esta página
-            se encarga de ofrecer un mínimo de información sobre mi, hablando
-            principalmente de , mis aficiones y métodos de contacto , espero que
-            os guste.
+            Programación Web en Entorno Cliente. Esta página se encarga de mostrar
+            algunas cosas sobre mí.
           </p>
         </div>
       </div>
